Unified logging log instances cause warnings on windows when only static functions are used

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • svc
    • b96

      Log instances can be used to reduce the number of times the log tags need to be specified, even when using only static functions, which means that the warning is useless.

            Assignee:
            Marcus Larsson (Inactive)
            Reporter:
            Marcus Larsson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: