8142483: Unified logging log instances cause warnings on windows when only static functions are used

Reviewed-by: brutisso, sla